Implemented reveal animation for twitter, dribble, linkedin, behance

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "anjithsasindran.materialsharingcard"
+        applicationId "hiteshsahu.materialvcard"
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
