--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Wed Sep 14 17:51:21 IST 2016
-org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx2048m
+#org.gradle.parallel=true
+#org.gradle.jvmargs=-Xmx2048m
 systemProp.https.proxyPort=8080
 systemProp.http.proxyHost=proxy.tcs.com
 systemProp.https.proxyHost=proxy.tcs.com
